--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -58,13 +58,12 @@ frontend ssl
     bind *:80 tfo
     bind *:55 tfo
     bind *:8080 tfo 
-    bind *:8880 tfo
-    bind *:8280 tfo
+    #bind *:8880 tfo
     bind *:2052 tfo
     bind *:2082 tfo
     bind *:2086 tfo
     bind *:2095 tfo
-    bind abns@haproxy-https accept-proxy ssl crt /etc/haproxy/hap.pem alpn h2,http/1.1 tfo
+    bind abns@haproxy-https accept-proxy ssl crt /etc/haproxy/xdxl.pem alpn h2,http/1.1 tfo
     
     tcp-request inspect-delay 500ms
     tcp-request content capture req.ssl_sni len 100
