--- a/nginx.conf
+++ b/nginx.conf
@@ -11,5 +11,5 @@ http {
     set_real_ip_from 127.0.0.1;
 
     include /etc/nginx/mime.types;
-    include /etc/nginx/conf.d/xdproject.conf;
+    include /etc/nginx/conf.d/*.conf;
 }
