--- a/xray.conf
+++ b/xray.conf
@@ -53,7 +53,7 @@ server {
   } 
     location ~ /t {
     if ($http_upgrade != "Websocket") {
-    rewrite /(.*) /trojan break;
+    rewrite /(.*) /t break;
     }
     add_header X-HTTP-LEVEL-HEADER 1;
     add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
